very much a WIP, own housework, code for platformio, timing with micros()

--- a/jupyter_notebook/Simple_python_NN.ipynb
+++ b/jupyter_notebook/Simple_python_NN.ipynb
@@ -9,7 +9,7 @@
     "This NN model is a naive implementation of a Neural Network in Python and is going to be used to train and then compare and test with a few embedded platforms. The class code is taken from [here](https://github.com/llSourcell/Make_a_neural_network/blob/master/demo.py).\n",
     "\n",
     "## Prerequisites\n",
-    "You need to install jupyter notebook for this example to run. The easiest way is to install miniconda and then use conda to install nupmy and jupyter."
+    "You need to install jupyter notebook for this example to run. The easiest way is to install miniconda and then use conda to install numpy and jupyter."
    ]
   },
   {
@@ -134,10 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "Karnaugh= [[0, 0, 1], [1, 1, 1], [1, 0, 1], [0, 1, 1]]\n",
     "training_set_inputs = array(Karnaugh)\n",
     "training_set_outputs = array([[0, 1, 1, 0]]).T"
    ]
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
