--- a/jupyter_notebook/Simple_python_NN_1hidden.ipynb
+++ b/jupyter_notebook/Simple_python_NN_1hidden.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,12 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_set_inputs = array([[0, 0, 1], [1, 1, 1], [1, 0, 1], [0, 1, 1]])\n",
-    "training_set_outputs = array([[0, 1, 1, 0]]).T"
+    "training_set_inputs = np.array([[0, 0, 1], [1, 1, 1], [1, 0, 1], [0, 1, 1]])\n",
+    "training_set_outputs = np.array([[0, 1, 1, 0]]).T"
    ]
   },
   {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,33 +181,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New synaptic weights after training: \n",
+      "New weights_1 after training: \n",
       "\n",
-      "[[ 1.5519611   1.06265208 -2.30455417  0.30877321 -1.17039621 -0.69348733\n",
-      "   0.40589165 -0.05932593  1.392689    0.48329391 -0.95295493  2.10166106\n",
-      "  -0.08448525  2.540211   -1.84539917 -0.01802026  0.92427558  1.08965851\n",
-      "  -1.82176436  0.45220284  2.14035487  1.82177898  0.62309348 -0.05199235\n",
-      "   0.29694869  0.39180283 -1.72233784 -1.70252288  0.78278019  1.28860736\n",
-      "  -0.47323461  1.49427898]\n",
-      " [ 0.65860842  0.31949065  0.30591339  0.13609545  0.37650795  0.60220631\n",
-      "  -0.18831817  0.59004868  0.70259631  0.60207043  0.07404055  0.39611358\n",
-      "  -0.10317019  0.05323626  0.48765352  0.18219485  0.04736742 -0.0801783\n",
-      "  -0.20573879  0.4997675  -0.03879152 -0.11746983  0.30696019 -0.05282913\n",
-      "   0.54693956  0.07674308  0.36036508  0.30217376 -0.07366525  0.17580282\n",
-      "   0.48374213  0.191315  ]\n",
-      " [-0.85158313 -0.13750623  0.7240955   0.06030529  0.68144084  0.28797794\n",
-      "   0.35705378 -0.1701374  -0.74218012  0.38431145  0.3302735  -1.00823685\n",
-      "   0.53841852 -1.06332893  0.5685712   0.62404852  0.12561239 -0.08860555\n",
-      "   0.780304   -0.18653686 -0.80268326 -0.36502932 -0.13735078  0.91758557\n",
-      "   0.69834386  0.54732749  0.28150989  0.69514718 -0.16997775 -0.17742198\n",
-      "   0.08422625 -0.6043115 ]]\n"
+      "[[ 1.54590308  1.07397985 -2.25466028  0.33811102 -1.12867717 -0.64943667\n",
+      "   0.42986236 -0.02123101  1.39225761  0.51070309 -0.92220837  2.0741712\n",
+      "  -0.05017488  2.49477885 -1.80706516  0.02225123  0.93510436  1.09748357\n",
+      "  -1.78366068  0.48039307  2.11263888  1.80570217  0.64619332 -0.01244945\n",
+      "   0.33251036  0.42452356 -1.68604411 -1.66573637  0.79887192  1.29312793\n",
+      "  -0.43412689  1.48948002]\n",
+      " [ 0.69719797  0.36646416  0.30634185  0.18639117  0.39957133  0.63840783\n",
+      "  -0.13419254  0.63404142  0.74280831  0.64542963  0.09757257  0.43168644\n",
+      "  -0.05348975  0.08756483  0.49330491  0.22541316  0.0984272  -0.03142329\n",
+      "  -0.19527752  0.54879648 -0.00276267 -0.07486475  0.35662824 -0.01086095\n",
+      "   0.58248215  0.12340923  0.36808708  0.31160506 -0.02433671  0.22188673\n",
+      "   0.52353881  0.23293827]\n",
+      " [-0.80204135 -0.06064239  0.75853612  0.14588782  0.7447778   0.36529958\n",
+      "   0.44643259 -0.09007896 -0.68772053  0.46804819  0.3949623  -0.96859334\n",
+      "   0.62717293 -1.02772198  0.61433208  0.71097663  0.20769972 -0.01264118\n",
+      "   0.82569063 -0.10635089 -0.75973254 -0.30416315 -0.05711981  1.00074372\n",
+      "   0.77874025  0.63730942  0.32783481  0.74344411 -0.09484307 -0.10335198\n",
+      "   0.16261123 -0.54897172]]\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,38 +229,38 @@
      "text": [
       "New weights_2 after training: \n",
       "\n",
-      "[[ 1.45800076]\n",
-      " [ 0.70967606]\n",
-      " [-2.68516009]\n",
-      " [ 0.02268129]\n",
-      " [-1.49619033]\n",
-      " [-0.91787325]\n",
-      " [ 0.09344477]\n",
-      " [-0.29547836]\n",
-      " [ 1.28547469]\n",
-      " [ 0.04046954]\n",
-      " [-1.29961045]\n",
-      " [ 2.02908422]\n",
-      " [-0.42753493]\n",
-      " [ 2.49285692]\n",
-      " [-2.11993655]\n",
-      " [-0.59068471]\n",
-      " [ 0.62114759]\n",
-      " [ 0.76446439]\n",
-      " [-2.22804807]\n",
-      " [ 0.25244996]\n",
-      " [ 1.9591224 ]\n",
-      " [ 1.53351039]\n",
-      " [ 0.37624935]\n",
-      " [-0.74102723]\n",
-      " [-0.48484892]\n",
-      " [-0.2683768 ]\n",
-      " [-2.020174  ]\n",
-      " [-1.99787033]\n",
-      " [ 0.54688533]\n",
-      " [ 0.90035289]\n",
-      " [-0.67413096]\n",
-      " [ 1.31408841]]\n"
+      "[[ 1.49230844]\n",
+      " [ 0.72051863]\n",
+      " [-2.71804102]\n",
+      " [ 0.03226573]\n",
+      " [-1.50402732]\n",
+      " [-0.91290899]\n",
+      " [ 0.09985538]\n",
+      " [-0.28420261]\n",
+      " [ 1.31793525]\n",
+      " [ 0.04681985]\n",
+      " [-1.32379375]\n",
+      " [ 2.0612959 ]\n",
+      " [-0.42702707]\n",
+      " [ 2.5197239 ]\n",
+      " [-2.14410923]\n",
+      " [-0.59546252]\n",
+      " [ 0.63146443]\n",
+      " [ 0.77656747]\n",
+      " [-2.26835508]\n",
+      " [ 0.27245133]\n",
+      " [ 1.98377998]\n",
+      " [ 1.54681141]\n",
+      " [ 0.39326437]\n",
+      " [-0.74995467]\n",
+      " [-0.48852328]\n",
+      " [-0.27687177]\n",
+      " [-2.04979737]\n",
+      " [-2.0214732 ]\n",
+      " [ 0.56493531]\n",
+      " [ 0.90879945]\n",
+      " [-0.6690652 ]\n",
+      " [ 1.34212305]]\n"
      ]
     }
    ],
@@ -280,12 +280,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# All possible inputs\n",
-    "inputs = array([\n",
+    "inputs = np.array([\n",
     "    [0,0,0],\n",
     "    [0,0,1],\n",
     "    [0,1,0],\n",
@@ -298,21 +298,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0] = [0.28424671]\n",
-      "[0 0 1] = [0.00297735]\n",
-      "[0 1 0] = [0.21864649]\n",
-      "[0 1 1] = [0.00229043]\n",
-      "[1 0 0] = [0.99992042]\n",
-      "[1 0 1] = [0.99799112]\n",
-      "[1 1 0] = [0.99988018]\n",
-      "[1 1 1] = [0.99720236]\n"
+      "[0 0 0] = [0.29705808]\n",
+      "[0 0 1] = [0.00288461]\n",
+      "[0 1 0] = [0.24794368]\n",
+      "[0 1 1] = [0.00253667]\n",
+      "[1 0 0] = [0.99992702]\n",
+      "[1 0 1] = [0.99790474]\n",
+      "[1 1 0] = [0.99989151]\n",
+      "[1 1 1] = [0.99714449]\n"
      ]
     }
    ],
@@ -339,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
